# NdkDemo

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp  one-lib.cpp  two-lib.cpp
app/src/main/cpp/one/: CMakeLists.txt  file1.c  file2.c
app/src/main/cpp/one/headers/: file1.h
app/src/main/cpp/two/: CMakeLists.txt
app/src/main/cpp/two/headers/: file2.h
app/src/main/java/com/ndk/demo/: MainActivity.java  One.java  Two.java
app/src/main/jni/: com_ndk_demo_One.h  com_ndk_demo_Two.h
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
